tests/ui/macros/issue-88228.stderr
error: cannot find macro `bla` in this scope
  --> $DIR/issue-88228.rs:20:5
   |
LL |     bla!();
   |     ^^^
   |
help: consider importing this macro through its public re-export
   |
LL + use crate::hey::bla;
   |

error: cannot find derive macro `println` in this scope
  --> $DIR/issue-88228.rs:14:10
   |
LL | #[derive(println)]
   |          ^^^^^^^
   |
   = note: `println` is in scope, but it is a function-like macro

error: cannot find derive macro `Bla` in this scope
  --> $DIR/issue-88228.rs:10:10
   |
LL | #[derive(Bla)]
   |          ^^^
   |
help: consider importing this derive macro through its public re-export
   |
LL + use crate::hey::Bla;
   |

error: aborting due to 3 previous errors

